# BMSTU_WORK

./: .travis.yml  CMakeLists.txt  CMakeLists.txt.txt  CursorManager.cpp  CursorManager.h  Doxyfile  MyPlayer.cpp  MyPlayer.h  README.md  Resizer.cpp  Resizer.h  SimpleButton.cpp  Source.cpp  SwitchingButton.cpp  SwitchingButton.h  TwinButtons.h  backgrounds.qrc  buttons.qrc  ht2.pro  main.cpp  music.qrc  sources.qrc  twinbuttons.cpp
Generators/: DateGenerator.cpp  DateGenerator.h  NameGenerator.cpp  NameGenerator.h  Randomizer.cpp  Randomizer.h  StampGenerator.cpp  StampGenerator.h
Graphics/: Background.cpp  Background.h  CustomButton.cpp  CustomButton.h  Face.cpp  Face.h  Follower.cpp  Follower.h  Mekanism.cpp  Mekanism.h  SimpleButton.cpp  SimpleButton.h  Stamp.cpp  Stamp.h  SwitchingButton.cpp  SwitchingButton.h  TextButton.cpp  TextButton.h  TutorialPage.cpp  TutorialPage.h  TwinButtons.cpp  TwinButtons.h  VeryComplicatedButton.cpp  VeryComplicatedButton.h  VisitorFace.cpp  VisitorFace.h
Logic/: Date.cpp  Date.h  ItemLockable.cpp  ItemLockable.h  Level.cpp  Level.cpp.autosave  Level.h  Level.h.autosave  Mistakes.cpp  Mistakes.h  Mistakes.h.autosave  Visitor.cpp  Visitor.h
Windows/: AdditionalWindow.cpp  AdditionalWindow.cpp.autosave  AdditionalWindow.h  Game.cpp  Game.h  SubWindow.cpp  SubWindow.h  WindowManager.cpp  WindowManager.cpp.autosave  WindowManager.h
tests/: test.cpp
